testsuite/tests/typecheck/should_fail/tcfail201.stderr

tcfail201.hs:17:27: error:
    • Couldn't match expected type ‘a’ with actual type ‘HsDoc id0’
      ‘a’ is a rigid type variable bound by
        the type signature for:
          gfoldl' :: forall (c :: * -> *) a.
                     (forall a1 b. c (a1 -> b) -> a1 -> c b)
                     -> (forall g. g -> c g) -> a -> c a
        at tcfail201.hs:15:1-85
    • In the pattern: DocEmpty
      In a case alternative: DocEmpty -> z DocEmpty
      In the expression: case hsDoc of DocEmpty -> z DocEmpty
    • Relevant bindings include
        hsDoc :: a (bound at tcfail201.hs:16:13)
        gfoldl' :: (forall a1 b. c (a1 -> b) -> a1 -> c b)
                   -> (forall g. g -> c g) -> a -> c a
          (bound at tcfail201.hs:16:1)
